Application with Swagger, plugins and comments